project(
  'unuran',
  version: '1.9.0',
)

# NOTE: scipy relies on these variable names when vendoring,
# do not change them without updating scipy

unuran_sources = files(
  'unuran/src/distr/cemp.c',
  'unuran/src/distr/condi.c',
  'unuran/src/distr/cont.c',
  'unuran/src/distr/corder.c',
  'unuran/src/distr/cvec.c',
  'unuran/src/distr/cvemp.c',
  'unuran/src/distr/cxtrans.c',
  'unuran/src/distr/discr.c',
  'unuran/src/distr/distr.c',
  'unuran/src/distr/distr_info.c',
  'unuran/src/distr/matr.c',
  'unuran/src/distributions/c_F.c',
  'unuran/src/distributions/c_beta.c',
  'unuran/src/distributions/c_beta_gen.c',
  'unuran/src/distributions/c_burr.c',
  'unuran/src/distributions/c_cauchy.c',
  'unuran/src/distributions/c_chi.c',
  'unuran/src/distributions/c_chi_gen.c',
  'unuran/src/distributions/c_chisquare.c',
  'unuran/src/distributions/c_exponential.c',
  'unuran/src/distributions/c_exponential_gen.c',
  'unuran/src/distributions/c_extremeI.c',
  'unuran/src/distributions/c_extremeII.c',
  'unuran/src/distributions/c_gamma.c',
  'unuran/src/distributions/c_gamma_gen.c',
  'unuran/src/distributions/c_ghyp.c',
  'unuran/src/distributions/c_gig.c',
  'unuran/src/distributions/c_gig2.c',
  'unuran/src/distributions/c_gig_gen.c',
  'unuran/src/distributions/c_hyperbolic.c',
  'unuran/src/distributions/c_ig.c',
  'unuran/src/distributions/c_laplace.c',
  'unuran/src/distributions/c_logistic.c',
  'unuran/src/distributions/c_lognormal.c',
  'unuran/src/distributions/c_lomax.c',
  'unuran/src/distributions/c_meixner.c',
  'unuran/src/distributions/c_normal.c',
  'unuran/src/distributions/c_normal_gen.c',
  'unuran/src/distributions/c_pareto.c',
  'unuran/src/distributions/c_powerexponential.c',
  'unuran/src/distributions/c_powerexponential_gen.c',
  'unuran/src/distributions/c_rayleigh.c',
  'unuran/src/distributions/c_slash.c',
  'unuran/src/distributions/c_slash_gen.c',
  'unuran/src/distributions/c_student.c',
  'unuran/src/distributions/c_student_gen.c',
  'unuran/src/distributions/c_triangular.c',
  'unuran/src/distributions/c_uniform.c',
  'unuran/src/distributions/c_vg.c',
  'unuran/src/distributions/c_weibull.c',
  'unuran/src/distributions/d_binomial.c',
  'unuran/src/distributions/d_binomial_gen.c',
  'unuran/src/distributions/d_geometric.c',
  'unuran/src/distributions/d_hypergeometric.c',
  'unuran/src/distributions/d_hypergeometric_gen.c',
  'unuran/src/distributions/d_logarithmic.c',
  'unuran/src/distributions/d_logarithmic_gen.c',
  'unuran/src/distributions/d_negativebinomial.c',
  'unuran/src/distributions/d_poisson.c',
  'unuran/src/distributions/d_poisson_gen.c',
  'unuran/src/distributions/d_zipf.c',
  'unuran/src/distributions/d_zipf_gen.c',
  'unuran/src/distributions/m_correlation.c',
  'unuran/src/distributions/vc_copula.c',
  'unuran/src/distributions/vc_multicauchy.c',
  'unuran/src/distributions/vc_multiexponential.c',
  'unuran/src/distributions/vc_multinormal.c',
  'unuran/src/distributions/vc_multinormal_gen.c',
  'unuran/src/distributions/vc_multistudent.c',
  'unuran/src/methods/arou.c',
  'unuran/src/methods/ars.c',
  'unuran/src/methods/auto.c',
  'unuran/src/methods/cext.c',
  'unuran/src/methods/cstd.c',
  'unuran/src/methods/dari.c',
  'unuran/src/methods/dau.c',
  'unuran/src/methods/dext.c',
  'unuran/src/methods/dgt.c',
  'unuran/src/methods/dsrou.c',
  'unuran/src/methods/dss.c',
  'unuran/src/methods/dstd.c',
  'unuran/src/methods/empk.c',
  'unuran/src/methods/empl.c',
  'unuran/src/methods/gibbs.c',
  'unuran/src/methods/hinv.c',
  'unuran/src/methods/hist.c',
  'unuran/src/methods/hitro.c',
  'unuran/src/methods/hrb.c',
  'unuran/src/methods/hrd.c',
  'unuran/src/methods/hri.c',
  'unuran/src/methods/itdr.c',
  'unuran/src/methods/mcorr.c',
  'unuran/src/methods/mixt.c',
  'unuran/src/methods/mvstd.c',
  'unuran/src/methods/mvtdr.c',
  'unuran/src/methods/ninv.c',
  'unuran/src/methods/norta.c',
  'unuran/src/methods/nrou.c',
  'unuran/src/methods/pinv.c',
  'unuran/src/methods/srou.c',
  'unuran/src/methods/ssr.c',
  'unuran/src/methods/tabl.c',
  'unuran/src/methods/tdr.c',
  'unuran/src/methods/unif.c',
  'unuran/src/methods/utdr.c',
  'unuran/src/methods/vempk.c',
  'unuran/src/methods/vnrou.c',
  'unuran/src/methods/x_gen.c',
  'unuran/src/parser/functparser.c',
  'unuran/src/parser/parser.c',
  'unuran/src/parser/stringparser.c',
  'unuran/src/specfunct/bessel_asympt.c',
  'unuran/src/specfunct/cephes_gamma.c',
  'unuran/src/specfunct/cephes_igam.c',
  'unuran/src/specfunct/cephes_incbet.c',
  'unuran/src/specfunct/cephes_ndtr.c',
  'unuran/src/specfunct/cephes_ndtri.c',
  'unuran/src/specfunct/cephes_polevl.c',
  'unuran/src/specfunct/cgamma.c',
  'unuran/src/specfunct/hypot.c',
  'unuran/src/tests/chi2test.c',
  'unuran/src/tests/correlation.c',
  'unuran/src/tests/countpdf.c',
  'unuran/src/tests/counturn.c',
  'unuran/src/tests/inverror.c',
  'unuran/src/tests/moments.c',
  'unuran/src/tests/printsample.c',
  'unuran/src/tests/quantiles.c',
  'unuran/src/tests/tests.c',
  'unuran/src/tests/timing.c',
  'unuran/src/urng/urng.c',
  'unuran/src/urng/urng_default.c',
  'unuran/src/urng/urng_set.c',
  'unuran/src/urng/urng_unuran.c',
  'unuran/src/utils/debug.c',
  'unuran/src/utils/eigensystem.c',
  'unuran/src/utils/error.c',
  'unuran/src/utils/fmax.c',
  'unuran/src/utils/hooke.c',
  'unuran/src/utils/lobatto.c',
  'unuran/src/utils/matrix.c',
  'unuran/src/utils/mrou_rectangle.c',
  'unuran/src/utils/slist.c',
  'unuran/src/utils/stream.c',
  'unuran/src/utils/string.c',
  'unuran/src/utils/umalloc.c',
  'unuran/src/utils/umath.c',
  'unuran/src/utils/unur_fp.c',
  'unuran/src/utils/vector.c'
)

unuran_include_dirs = include_directories(
  'unuran/src',
  'unuran/src/distr',
  'unuran/src/distributions',
  'unuran/src/methods',
  'unuran/src/parser',
  'unuran/src/specfunct',
  'unuran/src/urng',
  'unuran/src/utils',
  'unuran/src/tests'
)

unuran_version = '16:0:0'  # taken from `unuran/configure.ac`

unuran_defines = [
  '-DHAVE_ALARM=1',
  '-DHAVE_DECL_ALARM=1',
  '-DHAVE_DECL_HUGE_VAL=1',
  '-DHAVE_DECL_INFINITY=1',
  '-DHAVE_DECL_ISFINITE=1',
  '-DHAVE_DECL_ISINF=1',
  '-DHAVE_DECL_ISNAN=1',
  '-DHAVE_DECL_LOG1P=1',
  '-DHAVE_DECL_SIGNAL=1',
  '-DHAVE_DECL_SNPRINTF=1',
  '-DHAVE_DECL_VSNPRINTF=1',
  '-DHAVE_FLOAT_H=1',
  '-DHAVE_FLOOR=1',
  '-DHAVE_IEEE_COMPARISONS=1',
  '-DHAVE_INTTYPES_H=1',
  '-DHAVE_LIBM=1',
  '-DHAVE_LIMITS_H=1',
  '-DHAVE_POW=1',
  '-DHAVE_SIGNAL=1',
  '-DHAVE_SQRT=1',
  '-DHAVE_STDIO_H=1',
  '-DHAVE_STDINT_H=1',
  '-DHAVE_STDLIB_H=1',
  '-DHAVE_STRCHR=1',
  '-DHAVE_STRING_H=1',
  '-DHAVE_STRTOL=1',
  '-DHAVE_STRTOUL=1',
  '-DLT_OBJDIR=libs/',
  '-DPACKAGE=unuran',
  '-DPACKAGE_BUGREPORT=unuran@statmath.wu.ac.at',
  '-DPACKAGE_NAME=unuran',
  '-DPACKAGE_STRING=unuran ' + unuran_version,
  '-DPACKAGE_TARNAME=unuran',
  '-DPACKAGE_URL=',
  '-DPACKAGE_VERSION=' + unuran_version,
  '-DUNUR_ENABLE_INFO=1',
  '-DVERSION=' + unuran_version,
  '-DHAVE_CONFIG_H=1',
  '-D_ISOC99_SOURCE=1',
  '-DHAVE_DECL_HYPOT=1'
]
